refactor(Validation util): fix UserValidator